Add proper maven-publish for JitPack

--- a/build.gradle
+++ b/build.gradle
@@ -73,17 +73,16 @@ jar {
 // configure the maven publication
 publishing {
     publications {
-        create("mavenJava", MavenPublication) {
-            artifactId = project.archives_base_name
+        mavenJava(MavenPublication) {
+            artifactId = 'RenderPlus'
+            groupId = 'com.github.buble1234'
+            version = project.version
+
             from components.java
         }
     }
 
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
     repositories {
-        // Add repositories to publish to here.
-        // Notice: This block does NOT have the same function as the block in the top level.
-        // The repositories here will be used for publishing your artifact, not for
-        // retrieving dependencies.
+        mavenLocal()
     }
 }
